--- a/css/styles.css
+++ b/css/styles.css
@@ -526,6 +526,84 @@ footer {
   fill: var(--secondary-background-color);
 }
 
+.footer-subscribe {
+  display: flex;
+  align-items: flex-end;
+  margin-left: auto;
+  gap: 24px;
+}
+
+.footer-input-email {
+  padding-left: 16px;
+  min-width: 264px;
+  height: 40px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  filter: drop-shadow(0px 4px 4px rgba(0, 0, 0, 0.15));
+  border-radius: 4px;
+  color: rgba(255, 255, 255, 0.6);
+  background-color: transparent;
+}
+
+.footer-input-fill {
+  display: flex;
+  flex-direction: column;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+  color: var(--background-color);
+}
+
+.footer-input-description {
+  margin-bottom: 16px;
+  color: var(--background-color);
+
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+
+.footer-input-email::placeholder {
+  color: rgba(255, 255, 255, 0.6);
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 2;
+  letter-spacing: 0.04em;
+}
+
+.footer-subscribe-button {
+  position: relative;
+  padding: 8px 64px 8px 24px;
+  color: var(--background-color);
+  background: #4d5ae5;
+  border-radius: 4px;
+  border: transparent;
+  font-family: "Roboto";
+  font-style: normal;
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+}
+
+.footer-subscribe-button-icon {
+  position: absolute;
+  top: 10px;
+  right: 24px;
+  fill: var(--background-color);
+  transition: background-color var(--transition-duration-function),
+    box-shadow var(--transition-duration-function);
+}
+
+.footer-subscribe-button:hover,
+.footer-subscribe-button:focus,
+.footer-subscribe-button:active {
+  background-color: var(--accent-color);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+  fill: currentColor;
+}
+
 /*  ===========BACKDROP ===============  */
 
 .backdrop {
